# FIXPRICE_SCRAPY

./: pyproject.toml  readme.md
fixprice/fixprice/: categories.txt  config.py  items.py  middlewares.py  settings.py
fixprice/fixprice/spiders/: fixprice.py
